Added markdown for creating blog posts

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "yiidoc/yii2-redactor": "*",
 	    "dektrium/yii2-user": "*",
 	    "yiisoft/yii2-authclient": "*",
-        "kartik-v/yii2-widget-datetimepicker": "dev-master"
+        "kartik-v/yii2-widget-datetimepicker": "dev-master",
+        "yii2mod/yii2-markdown": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
